--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:show": "vitest -t show",
     "test:create": "vitest -t create",
     "test:delete": "vitest -t delete",
-    "test:update": "vitest -t update"
+    "test:update": "vitest -t update",
+    "test": "vitest"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
