--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@eslint/js": "^9.7.0",
     "eslint": "9.x",
     "globals": "^15.8.0",
+    "serverless-esbuild": "^1.52.1",
     "vitest": "^2.0.4"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.620.0",
-    "@aws-sdk/lib-dynamodb": "^3.645.0",
-    "aws-sdk": "^2.1664.0"
+    "@aws-sdk/lib-dynamodb": "^3.645.0"
   }
 }
