--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vitest": "^2.0.4"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.654.0",
     "@aws-sdk/client-dynamodb": "^3.620.0",
     "@aws-sdk/lib-dynamodb": "^3.645.0"
   }
