change auth route

--- a/serverless.yml
+++ b/serverless.yml
@@ -34,7 +34,7 @@ functions:
 
     events:
       - httpApi:
-          path: /signup
+          path: /auth/signup
           method: POST
   
   scheduler-create-appointment:
