--- a/serverless.yml
+++ b/serverless.yml
@@ -254,22 +254,22 @@ functions:
 resources:
   Resources:
 
-    SAppointments:
+    SAppointmentsTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: SAppointments
+        TableName: SAppointmentsTable
         BillingMode: PAY_PER_REQUEST
         PointInTimeRecoverySpecification:
           PointInTimeRecoveryEnabled: true
         AttributeDefinitions:
-          - AttributeName: GSI1PK
+          - AttributeName: PK
             AttributeType: S
-          - AttributeName: GSI1SK
+          - AttributeName: SK
             AttributeType: S
         KeySchema:
-          - AttributeName: GSI1PK
+          - AttributeName: PK
             KeyType: HASH
-          - AttributeName: GSI1SK
+          - AttributeName: SK
             KeyType: RANGE
         DeletionProtectionEnabled: true
 
