--- a/serverless.yml
+++ b/serverless.yml
@@ -33,7 +33,6 @@ provider:
         - OPTIONS
       allowCredentials: true
 
-
 package:
   individually: true
   patterns:
@@ -154,7 +153,7 @@ functions:
 
     events:
       - httpApi:
-          path: /appointments/{userId}
+          path: /appointments
           method: POST
           authorizer: 
             name: CognitoAuthorizer
@@ -167,7 +166,7 @@ functions:
         
     events:
       - httpApi:
-          path: /appointments/{userId}
+          path: /appointments/{userId}/{appointmentDate}
           method: GET
           authorizer: 
             name: CognitoAuthorizer
@@ -180,7 +179,7 @@ functions:
         
     events:
       - httpApi:
-          path: /appointments/{userId}
+          path: /appointments
           method: DELETE
           authorizer: 
             name: CognitoAuthorizer
@@ -193,7 +192,7 @@ functions:
         
     events:
       - httpApi:
-          path: /appointments/{userId}
+          path: /appointments/{userId}/{appointmentDate}
           method: PUT
           authorizer: 
             name: CognitoAuthorizer
